# dev-testbed-bluesky-client

./: .bazelignore  .bazelrc  MODULE.bazel  README.md  WORKSPACE.bazel  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  reveal-node-modules.sh
.devcontainer/: devcontainer.json
.devcontainer/feature-bazel/: install.sh
.github/workflows/: ci.yml
build_defs/android/: NOTES.md
build_defs/android/build-tools/: README.md
build_defs/android/cmdline-tools/: README.md
build_defs/ios/: NOTES.md
build_defs/lightningcss_bundle/: BUILD.bazel  lightningcss_bundle.bzl  package.json
build_defs/lightningcss_bundle/src/: main.ts
build_defs/rollup_bundle/: BUILD.bazel  package.json  rollup_bundle.bzl
build_defs/rollup_bundle/src/: main.ts
build_tools/: package.json
web_app/: BUILD.bazel  package.json  tsconfig.json
web_app/licenses/: css_reset.txt
web_app/public/: about.txt  index.html
web_app/src/: app.tsx  index.html  main.css  main.ts  post.tsx  site.webmanifest
web_app/src/base-styles/: reset.css
web_app/src/bluesky_api/: feed.ts  post.ts
web_app/src/fonts/: mod.css
web_app/src/fonts/inter/: mod.css
