load("@aspect_rules_js//js:defs.bzl", "js_run_devserver")
load("@npm//build_tools:@web/dev-server/package_json.bzl", web_dev_server_bin = "bin")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

ts_project(
    name = "ts",
    tsconfig = ":tsconfig.json",
    srcs = glob(["src/**/*.ts", "src/**/*.tsx"]),
    out_dir = "public",
    deps = [
        ":node_modules/vendor",
    ],
    root_dir = "src",
)

web_dev_server_bin.wds_binary(
    name = "wds",
)

# This can be run via `.ibazel run //web_app:devserver` for automatic reloads when source changes.
# Otherwise `bazel run //web_app:devserver` will provide a one-off run of the devserver.
js_run_devserver(
    name = "devserver",
    args = [
        "--watch",
        "--open",
        "--root-dir", "./web_app/public",
        "--node-resolve",
    ],
    data = glob(["public/**"], exclude = ["public/about.txt"]) + [
        ":ts",
    ],
    tool = ":wds",
)
